# referral-system

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.test.yml
backend/: .flake8  Dockerfile  Dockerfile.test  pyproject.toml
backend/src/apps/users/: models.py
backend/src/apps/users/tests/: test_models.py
backend/src/core/: settings.py
backend/src/core/settings/: __init__.py  common.py  database.py
